# sgx-visualizer

./: .gitignore
Scene/: CMakeLists.txt
Scene/include/: Call.h  DataBase.h  DataBaseManager.h  ECall.h  Ecall.h  EventMap.h  LabeledBlock.h  LabeledRect.h  Line.h  MainWindow.h  MeasureLine.h  MeasureScaleLine.h  MyThread.h  Notifier.h  OCall.h  Observer.h  Ocall.h  Rect.h  RenderBeispielVongPaul.h  Renderable.h  SeqDiagBlock.h  SequenceDiagram.h  SgxDatabaseStructure.h  TitleText.h  Transform2D.h
Scene/include/CustomWidgets/IDialogWidget/: IDialog.h
Scene/include/CustomWidgets/SGX/: AnalysisDialog.h  StatisticsDialog.h
Scene/include/DataBase/: DataBaseManager.h
Scene/include/DataBase/SGX/: Call.h  CallDynamicAnalysis.h  CallHoverInfo.h  CallStaticAnalysis.h  CallStatistics.h  CallStats.h  CallTypes.h  (+8 more)
Scene/include/Filtering/: Filter.h  IFilter.h  IReciever.h
Scene/include/Rendering/: GridLine.h  LabeledBlock.h  Line.h  MeasureLine.h  MeasureScaleLine.h  Rect.h  Renderable.h  SeqDiagBlock.h  SeqDiagBlockCluster.h  SequenceDiagram.h  TitleText.h  Transform2D.h
Scene/include/Utility/: MathUtility.h  Notifier.h  Observer.h  TimeStamp.h  TimeTableWidgetItem.h
Scene/src/: DataBase.cpp  DataBaseManager.cpp  LabeledBlock.cpp  LabeledRect.cpp  Line.cpp  MainWindow.cpp  MeasureLine.cpp  MeasureScaleLine.cpp  Rect.cpp  SeqDiagBlock.cpp  SequenceDiagram.cpp  SgxDatabaseStructure.cpp  TitleText.cpp  main.cpp
Scene/src/Rendering/: GridLine.cpp  LabeledBlock.cpp  Line.cpp  MeasureLine.cpp  MeasureScaleLine.cpp  Rect.cpp  SeqDiagBlock.cpp  SeqDiagBlockCluster.cpp  SequenceDiagram.cpp  TitleText.cpp
Scene/src/Utility/: TimeStamp.cpp  TimeTableWidgetItem.cpp
Scene/src/lib/: qcustomplot.cpp
(+31 files in other folders)
